# intuitive_vectorscript

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
intuitive_vectorscript/: __init__.py  dialog.py  item.py  item_multiple_choices.py  item_single_value_field.py  main.py  test.py  usefull_functions.py
intuitive_vectorscript/intuitive_vectorscript.egg-info/: PKG-INFO  SOURCES.txt
