[metadata]
name = intuitive_vectorscript
version = 0.0.1
author = Lukas Benjamin Tobler
author_email = lukasbtobler@gmail.com
description = A collection of useful python scripts, functions and classes for Vectorworks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blackrvn/intuitive_vectorscript
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = intuitive_vectorscript
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src